initial oscal-editor for 800-53 and 800-171
800-171 DB files are exact state from https://github.com/FATHOM5CORP/oscal/commit/66d40d56467d0ad2f00692448ac966750bd816fb

--- a/easy-dynamics/oscal-rest-service/oscal-rest-service-app/src/main/resources/application.properties
+++ b/easy-dynamics/oscal-rest-service/oscal-rest-service-app/src/main/resources/application.properties
@@ -13,3 +13,7 @@ log4j2.formatMsgNoLookups=true
 
 # Needed to handle very large OSCAL file responses, allow 30s
 spring.mvc.async.request-timeout=30000
+
+server.tomcat.accessLogEnabled=true
+server.tomcat.accessLogPattern=%t %m %U - %s
+server.tomcat.accesslog.prefix=stdout
