--- a/easy-dynamics/oscal-editor-deployment/all-in-one/Dockerfile
+++ b/easy-dynamics/oscal-editor-deployment/all-in-one/Dockerfile
@@ -19,58 +19,47 @@ ARG _JAVA_VERSION=${JAVA_VERSION}
 
 FROM node:${NODE_VERSION}-alpine as build-viewer
 
-ARG OSCAL_REACT_GIT_REPO=https://github.com/EasyDynamics/oscal-react-library
+#ARG OSCAL_REACT_GIT_REPO=https://github.com/EasyDynamics/oscal-react-library
 ARG OSCAL_REACT_GIT_BRANCH=main
 ARG OSCAL_REACT_DIR=oscal-react-library
 ARG OSCAL_REST_BASE_URL=/oscal/v1
-ARG VIEWER_PATH
+ARG VIEWER_PATH=easy-dynamics/$OSCAL_REACT_DIR
 
 WORKDIR /app
 
-# Copy the (possibly empty/undefined) viewer app into build
-COPY $VIEWER_PATH /app/build
-# If VIEWER_PATH has been defined, otherwise build from source
-RUN if [ -n "$VIEWER_PATH" ] ; \
-    then echo "Using viewer from $VIEWER_PATH" ; \
-    else apk add --no-cache git && \
-    rm -rf /app/build && \
-    git clone --branch "$OSCAL_REACT_GIT_BRANCH" --depth 1 -- "$OSCAL_REACT_GIT_REPO" "$OSCAL_REACT_DIR" && \
-    cd "$OSCAL_REACT_DIR" && \
+
+# Copy the local cache of react lib to build. todo layer optimizations to not re-download deps every time source changes
+COPY $VIEWER_PATH /opt/app/$OSCAL_REACT_DIR
+RUN cd /opt/app/"$OSCAL_REACT_DIR" && \
     npm install -g npm@latest && \
     npm ci && \
     REACT_APP_REST_BASE_URL="$OSCAL_REST_BASE_URL" npm run build && \
-    mv packages/oscal-viewer/build /app/ ; \
-    fi
+    mv packages/oscal-viewer/build /app/
 
 FROM maven:3-openjdk-${JAVA_VERSION} as build-service
 ARG _JAVA_VERSION
 
-ARG OSCAL_REST_SERVICE_GIT_REPO=https://github.com/EasyDynamics/oscal-rest-service
+#ARG OSCAL_REST_SERVICE_GIT_REPO=https://github.com/EasyDynamics/oscal-rest-service
 ARG OSCAL_REST_SERVICE_GIT_BRANCH=develop
 ARG OSCAL_REST_SERVICE_DIR=oscal-rest-service
-ARG REST_PATH
+ARG REST_PATH=easy-dynamics/$OSCAL_REST_SERVICE_DIR
 
 WORKDIR /app
 
-COPY $REST_PATH /app/oscal-rest-service-app.jar
+COPY $REST_PATH /opt/app/$OSCAL_REST_SERVICE_DIR
 
-RUN if [ -n "$REST_PATH" ]; \
-    then echo "Using REST service from $REST_PATH"; \
-    else rm -rf /app/oscal-rest-service-app.jar && \
-    git clone --branch "${OSCAL_REST_SERVICE_GIT_BRANCH}" --depth 1 -- "${OSCAL_REST_SERVICE_GIT_REPO}" "${OSCAL_REST_SERVICE_DIR}" && \
-    cd "${OSCAL_REST_SERVICE_DIR}" && \
+RUN cd /opt/app/"${OSCAL_REST_SERVICE_DIR}" && \
     mvn -Djava.version="${_JAVA_VERSION}" clean install && \
     # Even though we use a * glob here, there should only be one file that matches this spec. Using the
     # glob means that we don't have to worry about the specified version in the `pom.xml`
-    mv oscal-rest-service-app/target/oscal-rest-service-app*.jar "/app/oscal-rest-service-app.jar"; \
-    fi
+    mv oscal-rest-service-app/target/oscal-rest-service-app*.jar /app/oscal-rest-service-app.jar
 
-FROM gcr.io/distroless/java${JAVA_VERSION}-debian11:nonroot
+FROM maven:3-openjdk-${JAVA_VERSION}
 
 COPY --from=build-viewer /app/build /app/oscal-viewer-app
 COPY --from=build-service /app/oscal-rest-service-app.jar /app/oscal-rest-service-app.jar
 
-USER nonroot:nonroot
+#USER nonroot:nonroot
 
 # Apply default configuration values via environment variable for the location of the OSCAL
 # Content directory as well as the location of the OSCAL Viewer/Editor application to be
@@ -82,4 +71,4 @@ EXPOSE 8080
 
 WORKDIR /app
 
-CMD ["oscal-rest-service-app.jar"]
+CMD ["java", "-jar","oscal-rest-service-app.jar"]
